Salesforce_Server/src/objects/Enviroment__c.object
<CustomObject>
    <fields>
        <fullName>Org_ID__c</fullName>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <formula>LEFT(Org_ID__c, 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrganizationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshTokenCode__c</fullName>
        <label>RefreshTokenCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <label>Server URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenCodeNonEncrypted__c</fullName>
        <label>TokenCodeNonEncrypted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenCode__c</fullName>
        <label>TokenCode</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production/Developer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Org_ID__c</columns>
        <columns>Type__c</columns>
        <columns>User_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RefreshTokenCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>Org_ID__c</columns>
        <columns>User_Name__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test</label>
    </listViews>
    <listViews>
        <fullName>testQueue_Enviroment</fullName>
        <filterScope>Queue</filterScope>
        <label>testQueue</label>
        <queue>testQueue</queue>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>